Dummy_Package_for_scratch_org/main/default/objects/Metadata_Group_Item__c/Metadata_Group_Item__c.object-meta.xml
<CustomObject>
    <label>Metadata Item</label>
    <nameField>
        <displayFormat>MGI-{00000000}</displayFormat>
        <label>Metadata Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>