Dummy_Package_for_scratch_org/main/default/objects/Metadata_Group_Item__c/fields/Metadata_Group__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Group__c</fullName>
    <description>The parent metadata group this item belongs to</description>
    <inlineHelpText>The parent metadata group this item belongs to</inlineHelpText>
    <label>Parent Group</label>
    <referenceTo>Metadata_Group__c</referenceTo>
    <relationshipLabel>Metadata Items</relationshipLabel>
    <relationshipName>Metadata_Group_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>