Dummy_Package_for_scratch_org/main/default/objects/Metadata_Group_Item__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <description>Match &apos;All&apos; metadata of this type, or only metadata whose name matches a pattern?</description>
    <inlineHelpText>Match &apos;All&apos; metadata of this type, or only metadata whose name matches a pattern?</inlineHelpText>
    <label>Metadata Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Operator</valueSetName>
    </valueSet>
</CustomField>