Dummy_Package_for_scratch_org/main/default/objects/Metadata_Group_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of metadata</description>
    <inlineHelpText>The type of metadata</inlineHelpText>
    <label>Metadata Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Metadata_Types</valueSetName>
    </valueSet>
</CustomField>