Dummy_Package_for_scratch_org/main/default/objects/Metadata_Group_Item__c/validationRules/Validate_Value_field_against_Operator.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Value_field_against_Operator</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Operator__c, &apos;All&apos;), NOT(ISBLANK(Value__c)))</errorConditionFormula>
    <errorDisplayField>Value__c</errorDisplayField>
    <errorMessage>When the Operator equals &apos;All&apos;, the Value field must be empty.</errorMessage>
</ValidationRule>