Dummy_Package_for_scratch_org/main/default/objects/Metadata_Group_Item__c/validationRules/Validate_Value_field_against_Operator_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Value_field_against_Operator_2</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!ISPICKVAL(Operator__c, &apos;All&apos;), ISBLANK(Value__c))</errorConditionFormula>
    <errorMessage>When the Operator is not &quot;All&quot;, a Value is required.</errorMessage>
</ValidationRule>